@@ -23,16 +23,17 @@ public class LuxuryProductCategoryDecorator implements CSVCellDecorator
 
 	/*
 	 * @Javadoc
-	 * 
+	 *
 	 * @param position,srcLine
-	 * 
+	 *
 	 * @return finalvalue
 	 */
 	@Override
 	public String decorate(final int position, final Map<Integer, String> srcLine)
 	{
 
-		final Integer position2 = new Integer(12);
+		//final Integer position2 = new Integer(12);
+		final Integer position2 = Integer.valueOf(12); //Sonar fix
 		final String categories = srcLine.get(position);
 		final String luxIndicator = srcLine.get(position2);
 
